--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
     "next": "10.2.0",
     "next-images": "^1.7.0",
-    "react": "17.0.2",
+    "polished": "^4.1.3",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
